og tags updated

--- a/index.html
+++ b/index.html
@@ -6,29 +6,29 @@
     <title>Can Polat</title>
     <meta
       name="description"
-      content="Explore the portfolio of Can Polat, a frontend developer specializing in creating seamless web experiences."
+      content="An engineer who prioritizes working solutions over perfect theories. Passionate about solving problems and continuously learning to drive progress forward."
     />
     <meta
       name="keywords"
-      content="Can Polat, frontend developer, web development, portfolio, HTML, CSS, JavaScript"
+      content="Can Polat, can polat, can polat portfolio, canpolat.me, senior frontend engineer, software engineer, ericsson, turkcell"
     />
     <meta name="author" content="Can Polat" />
-    <link rel="canonical" href="https://www.example.com" />
-    <meta property="og:title" content="Can Polat | Frontend Developer" />
+    <link rel="canonical" href="https://canpolat.me" />
+    <meta property="og:title" content="Can Polat | Senior Frontend Engineer" />
     <meta
       property="og:description"
-      content="Explore the portfolio of Can Polat, a frontend developer specializing in creating seamless web experiences."
+      content="An engineer who prioritizes working solutions over perfect theories. Passionate about solving problems and continuously learning to drive progress forward."
     />
-    <meta property="og:url" content="https://www.example.com" />
+    <meta property="og:url" content="https://canpolat.me" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://www.example.com/image.jpg" />
+    <meta property="og:image" content="https://media.licdn.com/dms/image/D4D03AQEuScUHd0QObw/profile-displayphoto-shrink_800_800/0/1689624397107?e=1729123200&v=beta&t=Tu017KEzHp_1Rq6qG9afkqcnzs0lfAgt5eEFCqXNqQk" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Can Polat | Frontend Developer" />
+    <meta name="twitter:title" content="Can Polat | Senior Frontend Engineer" />
     <meta
       name="twitter:description"
-      content="Explore the portfolio of Can Polat, a frontend developer specializing in creating seamless web experiences."
+      content="An engineer who prioritizes working solutions over perfect theories. Passionate about solving problems and continuously learning to drive progress forward."
     />
-    <meta name="twitter:image" content="https://www.example.com/image.jpg" />
+    <meta name="twitter:image" content="https://media.licdn.com/dms/image/D4D03AQEuScUHd0QObw/profile-displayphoto-shrink_800_800/0/1689624397107?e=1729123200&v=beta&t=Tu017KEzHp_1Rq6qG9afkqcnzs0lfAgt5eEFCqXNqQk" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
