image link added

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     />
     <meta property="og:url" content="https://canpolat.me" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://media.licdn.com/dms/image/D4D03AQEuScUHd0QObw/profile-displayphoto-shrink_800_800/0/1689624397107?e=1729123200&v=beta&t=Tu017KEzHp_1Rq6qG9afkqcnzs0lfAgt5eEFCqXNqQk" />
+    <meta property="og:image" content="https://s3-placid.s3.eu-central-1.amazonaws.com/production/rest-images/spiryjk93xe1i/studio-55b5038009c9dacaaf69ca725f3806fc-nmzbvzlc.jpg" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Can Polat | Senior Frontend Engineer" />
     <meta
       name="twitter:description"
       content="An engineer who prioritizes working solutions over perfect theories. Passionate about solving problems and continuously learning to drive progress forward."
     />
-    <meta name="twitter:image" content="https://media.licdn.com/dms/image/D4D03AQEuScUHd0QObw/profile-displayphoto-shrink_800_800/0/1689624397107?e=1729123200&v=beta&t=Tu017KEzHp_1Rq6qG9afkqcnzs0lfAgt5eEFCqXNqQk" />
+    <meta name="twitter:image" content="https://s3-placid.s3.eu-central-1.amazonaws.com/production/rest-images/spiryjk93xe1i/studio-55b5038009c9dacaaf69ca725f3806fc-nmzbvzlc.jpg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
