--- a/index.html
+++ b/index.html
@@ -4,6 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Can Polat</title>
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/public/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/public/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/public/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/public/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="/public/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
+
     <meta
       name="description"
       content="An engineer who prioritizes working solutions over perfect theories. Passionate about solving problems and continuously learning to drive progress forward."
@@ -21,18 +47,24 @@
     />
     <meta property="og:url" content="https://canpolat.me" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://s3-placid.s3.eu-central-1.amazonaws.com/production/rest-images/spiryjk93xe1i/studio-55b5038009c9dacaaf69ca725f3806fc-nmzbvzlc.jpg" />
+    <meta
+      property="og:image"
+      content="https://s3-placid.s3.eu-central-1.amazonaws.com/production/rest-images/spiryjk93xe1i/studio-55b5038009c9dacaaf69ca725f3806fc-nmzbvzlc.jpg"
+    />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Can Polat | Senior Frontend Engineer" />
     <meta
       name="twitter:description"
       content="An engineer who prioritizes working solutions over perfect theories. Passionate about solving problems and continuously learning to drive progress forward."
     />
-    <meta name="twitter:image" content="https://s3-placid.s3.eu-central-1.amazonaws.com/production/rest-images/spiryjk93xe1i/studio-55b5038009c9dacaaf69ca725f3806fc-nmzbvzlc.jpg" />
+    <meta
+      name="twitter:image"
+      content="https://s3-placid.s3.eu-central-1.amazonaws.com/production/rest-images/spiryjk93xe1i/studio-55b5038009c9dacaaf69ca725f3806fc-nmzbvzlc.jpg"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-    rel="preload"
+      rel="preload"
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
