--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
     />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link href="./output.css" rel="stylesheet" />
+    <script src="./main.js" type="module" defer></script>
   </head>
   <body>
     <header class="mx-auto max-w-custom p-5">
@@ -126,6 +127,12 @@
           progress forward.
         </p>
       </section>
+
+      <section id="articles" aria-labelledby="articles-heading">
+        <h2 id="articles-heading" class="title">Articles</h2>
+        <ul id="medium-posts"></ul>
+      </section>
+
       <section id="contact" aria-labelledby="contact-heading">
         <h2 class="title" id="contact-heading">Contact 🤙</h2>
         <ul class="text flex flex-col items-baseline">
