github link changed

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
           </li>
           <li>
             <a
-              href="https://github.com/canpolatt"
+              href="https://github.com/cnapolta"
               target="_blank"
               aria-label="Visit Can's GitHub profile"
               rel="noopener"
